--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilites;
+@tailwind utilities;
+
+
+.restrict-width {
+    width: 1200px;
+}
+
+.restrict-max-width {
+    max-width: 1200px;
+}
+
+.row-flex {
+    display: flex;
+}
+
+.column-flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.align-start {
+    align-items: flex-start;
+}
+.align-end {
+    align-items: flex-end;
+}
+.align-center {
+    align-items: center;
+}
+.justify-start {
+    justify-content: flex-start;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.justify-end {
+    justify-content: flex-end;
+}
+.justify-center {
+    justify-content: center;
+}
+
+.circle-wrapper {
+    border-radius: 50%;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
