--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.relative {
+    position: relative;
+}
+
+.absolute {
+    position: absolute;
+}
 
 .restrict-width {
     width: 1200px;
